--- a/src/css/index.css
+++ b/src/css/index.css
@@ -8,7 +8,7 @@
     --border-color: #777;
     --container-background: #222;
     --text-color: #ccc;
-    --small-screen: 800px;
+    --container-width: 800px;
     font-size: 20px;
 }
 
@@ -20,7 +20,7 @@ body {
 
 .container {
     background-color: var(--container-background);
-    max-width: var(--small-screen);
+    max-width: var(--container-width);
     margin: auto;
     margin-top: 1rem;
     padding: 1rem;
@@ -70,7 +70,7 @@ hr {
 }
 
 .form-div button {
-    width: 8rem;
+    width: 6rem;
     margin-left: 1rem;
     margin-right: 1rem;
     background-color: var(--page-background);
@@ -91,6 +91,10 @@ hr {
     margin-top: 1rem;
 }
 
+.form-select-div {
+    display: flex;
+}
+
 .movie {
     border-bottom: 1px solid var(--border-color);
     display: flex;
@@ -104,6 +108,12 @@ hr {
 
 .movie .movie-delete {
     cursor: pointer;
+    max-width: 2.5rem;
+    margin-left: 0.5rem;
+}
+
+.movie .movie-star {
+    max-width: 1.2rem;
 }
 
 .movie .movie-delete:hover {
@@ -114,10 +124,63 @@ hr {
     background-color: var(--text-color)
 }
 
+.movie-end {
+    display: flex;
+    align-items: center;
+}
+
 @media screen and (max-width: 800px) {
     .container {
         border-radius: 0;
         border-left: none;
         border-right: none;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .form-div form {
+        flex-direction: column;
+    }
+
+    .form-select-div {
+        justify-content: space-between;
+        min-height: 1.8rem;
+        margin-top: 0.5rem;
+    }
+
+    .form-div button {
+        margin-right: 0;
+        width: 100%;
+    }
+
+    .form-div select {
+        border-left: 1px solid var(--border-color);
+        width: 100%;
+    }
+
+    .movie {
+        flex-direction: column;
+        margin-bottom: 1rem;
+    }
+
+    .movie h3 {
+        margin-bottom: 0.5rem;
+        margin-top: 0.5rem;
+    }
+
+    .movie:first-child h3 {
+        margin-top: 1rem;
+    }
+
+    .movie .movie-delete {
+        margin-left: auto;
+    }
+
+    .movie-end {
+        margin-bottom: 1rem;
+    }
+
+    .movie:last-child .movie-end {
+        margin-bottom: 0;
     }
 }
