New icon and cleanup

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -23,6 +23,7 @@ body {
     max-width: var(--container-width);
     margin: auto;
     margin-top: 1rem;
+    margin-bottom: 1rem;
     padding: 1rem;
     border: 1px solid var(--border-color);
     border-radius: 1rem;
