--- a/src/css/index.css
+++ b/src/css/index.css
@@ -5,7 +5,7 @@
 
 :root {
     --page-background: #111;
-    --border-color: #777;
+    --border-color: #555;
     --container-background: #222;
     --text-color: #ccc;
     --container-width: 800px;
@@ -97,14 +97,15 @@ hr {
 }
 
 .movie {
-    border-bottom: 1px solid var(--border-color);
     display: flex;
     align-content: center;
     justify-content: space-between;
-}
-
-.movie:last-child {
-    border-bottom: none;
+    background-color: var(--page-background);
+    border: 1px solid var(--border-color);
+    border-radius: 1rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    margin-top: 1rem;
 }
 
 .movie .movie-delete {
@@ -131,11 +132,13 @@ hr {
 }
 
 .sort-buttons {
+    display: flex;
     margin-top: 1rem;
+    justify-content: center;
 }
 
 .sort-buttons button {
-    height: 1.5rem;
+    padding: 0.5rem;
     background-color: var(--page-background);
     border: 1px solid var(--border-color);
 }
@@ -188,10 +191,6 @@ hr {
 
     .movie h3 {
         margin-bottom: 0.5rem;
-        margin-top: 0.5rem;
-    }
-
-    .movie:first-child h3 {
         margin-top: 1rem;
     }
 
@@ -201,9 +200,5 @@ hr {
 
     .movie-end {
         margin-bottom: 1rem;
-    }
-
-    .movie:last-child .movie-end {
-        margin-bottom: 0;
     }
 }
