--- a/src/css/index.css
+++ b/src/css/index.css
@@ -108,14 +108,20 @@ hr {
     margin-top: 1rem;
 }
 
+.movie h3 {
+    margin-right: 1rem;
+}
+
 .movie .movie-delete {
     cursor: pointer;
-    max-width: 2.5rem;
+    width: 2.5rem;
+    height: 2.5rem;
     margin-left: 0.5rem;
 }
 
 .movie .movie-star {
-    max-width: 1.2rem;
+    width: 1.2rem;
+    height: 1.2rem;
 }
 
 .movie .movie-delete:hover {
@@ -192,6 +198,7 @@ hr {
     .movie h3 {
         margin-bottom: 0.5rem;
         margin-top: 1rem;
+        margin-right: 0;
     }
 
     .movie .movie-delete {
